tests/pos/i3000.scala
class Foo {
  new Object { }
}

package bar { }
