tests/neg/parser-stability-11.scala
package x0 {
case class x0
}
package x0
class x0
